# CGlauber

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  GlauberConst.hh  README.md
.github/workflows/: ci.yml
FermiMomentum/: FermiMomentum.cc  FermiMomentum.hh
TGlauber/: TGlauNucleus.cc  TGlauNucleus.hh
Wrapper/: CGlauber.hh  CGlauberFactory.cc  CGlauberFactory.hh  CGlauberGenerator.cc  CGlauberGenerator.hh  CGlauberModule.cc  CGlauberModule.hh
cmake/: CGlauberConfig.cmake.in
tests/: CMakeLists.txt  cglauber_test.cc
